--- a/administrative_front/src/app/app.component.html
+++ b/administrative_front/src/app/app.component.html
@@ -1,10 +1,3 @@
-<h1 style="text-align: center;">AMRAM 3D</h1>
-<div class="container">
-  <h2 style="text-align: center;">Bienvenido, Admin</h2>
-  <div class="admin_buttins">
-    <button>Gestion de Modelos</button>
-    <button>Gestion de Solicitudes</button>
-    <button>Log y Estadisticas</button>
-  </div>
-</div>
+<router-outlet>
 
+</router-outlet>
