Request and Log added
yessir

--- a/administrative_front/src/app/body/pages/gmodels/gmodels.component.css
+++ b/administrative_front/src/app/body/pages/gmodels/gmodels.component.css
@@ -1,6 +1,5 @@
 table {
     width: 100%;
-
   }
   
   .mat-header-cell {
@@ -20,6 +19,40 @@ table {
   }
 
   .add-model{
+    width: 95%;
     display: flex;
     justify-content: right;
+    align-self: center;
   }
+
+  .mat-form-field {
+    font-size: 14px;
+    width: 100%;
+  }
+
+  .filtro{
+    width: 95%;
+    display: flex;
+    align-self: center;
+  }
+
+  .button-headers{
+    width: 95%;
+    display: flex;
+    align-self: center;
+  }
+
+  .tabla{
+    width: 95%;
+    align-self: center;
+  }
+
+  .container{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .add-model{
+    padding-top: 2vh;
+  }
+  
