--- a/administrative_front/src/app/body/pages/gmodels/gmodels.component.html
+++ b/administrative_front/src/app/body/pages/gmodels/gmodels.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <div><h2>AMRARM3D</h2> </div>
 <div class="head">
    <h1>Gestion de Modelos</h1> 
@@ -7,16 +8,20 @@
     <button mat-raised-button color="primary" routerLink = "/body" class="demo-button">
       Volver
     </button>
-    <div class="add-model">
-        <button mat-button color="primary">
-            Agregar modelo
-          </button>
-    </div>
+    
    
 </div>
 
+<div class="filtro">
+    <mat-form-field appearance="standard">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+      </mat-form-field>
+</div>
 
-<div class="mat-elevation-z8">
+
+
+<div class="mat-elevation-z8 tabla">
     <table mat-table [dataSource]="dataSource" matSort>
     
         <!-- ID Column -->
@@ -57,9 +62,19 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         
-            
-        
+
     </table>
+    <div class="paginator">
+        <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>
     
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+</div>
+
+
+
+<div class="add-model">
+    <button mat-fab color="primary">
+        <mat-icon>add</mat-icon>
+    </button>
+</div>
 </div>
