--- a/administrative_front/src/app/body/pages/solicitud/solicitud.component.html
+++ b/administrative_front/src/app/body/pages/solicitud/solicitud.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div><h2>AMRARM3D</h2> </div>
     <div class="head">
-       <h1>Gestion de Modelos</h1> 
+       <h1>Gestion de Solicitudes</h1> 
     </div>
     
     <div class="button-headers">
@@ -12,7 +12,7 @@
     <div class="filtro">
         <mat-form-field appearance="standard">
             <mat-label>Filter</mat-label>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Piramide" #input>
           </mat-form-field>
     </div>
     <div class="mat-elevation-z8 tabla">
@@ -52,7 +52,7 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> Actions </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-button color="primary" style="margin-right: 2.5vh;">Detalles</button> 
+                    <button mat-button color="primary" style="margin-right: 2.5vh;" routerLink="/solicitud/details">Detalles</button> 
                     <button mat-icon-button color="primary">
                         <mat-icon>delete</mat-icon>
                     </button>
