added more pages
yessir

--- a/administrative_front/src/app/body/subpages/see-comments/see-comments.component.html
+++ b/administrative_front/src/app/body/subpages/see-comments/see-comments.component.html
@@ -1,1 +1,13 @@
-<p>see-comments works!</p>
+<div class="container">
+    <div><h2>AMRARM3D</h2> </div>
+    <div class="head">
+       <h1>Comentarios de Modelo 3D: </h1> 
+    </div>
+    
+    <div class="button-headers">
+        <button mat-raised-button color="primary" routerLink = "/models" class="demo-button">
+          Volver
+        </button>
+    </div>
+    
+</div>
