--- a/administrative_front/src/app/body/pages/solicitud/solicitud.component.html
+++ b/administrative_front/src/app/body/pages/solicitud/solicitud.component.html
@@ -52,7 +52,7 @@
             <ng-container matColumnDef="actions">
                 <th mat-header-cell *matHeaderCellDef> Actions </th>
                 <td mat-cell *matCellDef="let element">
-                    <button mat-button color="primary" style="margin-right: 2.5vh;" routerLink="/solicitud/details">Detalles</button> 
+                    <button mat-button color="primary" style="margin-right: 2.5vh;" (click)="testing(element)">Detalles</button> 
                     <button mat-icon-button color="primary">
                         <mat-icon>delete</mat-icon>
                     </button>
