comment section added
yessir

--- a/administrative_front/src/app/body/subpages/see-comments/see-comments.component.css
+++ b/administrative_front/src/app/body/subpages/see-comments/see-comments.component.css
@@ -11,3 +11,22 @@
     display: flex;
     flex-direction: column;
   }
+
+  table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+
+  td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+
+  .comment-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-self: center;
+  }
