--- a/administrative_front/src/app/body/pages/gmodels/gmodels.component.html
+++ b/administrative_front/src/app/body/pages/gmodels/gmodels.component.html
@@ -1,15 +1,15 @@
 <div class="container">
 <div><h2>AMRARM3D</h2> </div>
 <div class="head">
-   <h1>Gestion de Modelos</h1> 
+   <h1>Gestion de Modelos</h1>
 </div>
 
 <div class="button-headers">
     <button mat-raised-button color="primary" routerLink = "/body" class="demo-button">
       Volver
     </button>
-    
-   
+
+
 </div>
 
 <div class="filtro">
@@ -23,25 +23,25 @@
 
 <div class="mat-elevation-z8 tabla">
     <table mat-table [dataSource]="dataSource" matSort>
-    
+
         <!-- ID Column -->
         <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
         <td mat-cell *matCellDef="let row"> {{row.id}} </td>
         </ng-container>
-    
+
         <!-- Name Column -->
         <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
         <td mat-cell *matCellDef="let row"> {{row.name}} </td>
         </ng-container>
-    
+
         <!-- Fruit Column -->
         <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
         <td mat-cell *matCellDef="let row"> {{row.category}} </td>
         </ng-container>
-    
+
         <!-- Fruit Column -->
         <ng-container matColumnDef="grade">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Grade </th>
@@ -52,22 +52,22 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-button color="primary" style="margin-right: 2.5vh;" routerLink = "/models/comments">Comentarios</button> 
+                <button mat-button color="primary" style="margin-right: 2.5vh;" (click)="testing(element)">Comentarios</button>
                 <button mat-icon-button color="primary">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
             </ng-container>
-    
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        
+
 
     </table>
     <div class="paginator">
         <mat-paginator [pageSizeOptions]="[10, 25, 50, 100]" aria-label="Select page of users"></mat-paginator>
     </div>
-    
+
 </div>
 
 
