--- a/administrative_front/src/app/body/principal/principal.component.css
+++ b/administrative_front/src/app/body/principal/principal.component.css
@@ -15,8 +15,9 @@ h1{
   .admin_buttins{
     display: flex;
     flex-direction: column;
-    width: 25%;
+    width: 20%;
+    height: 30%;
     justify-content: center;
     align-self: center;
+    gap: 1em;
   }
-  
